<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/more_fragment_tv_fav"
        style="@style/TextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:drawableEnd="@drawable/ic_heart_solid"
        android:text="@string/favourites"
        android:textSize="@dimen/_20ssp"
        tools:ignore="RtlCompat" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:background="#E5E5E5" />


    <TextView
        android:id="@+id/more_fragment_tv_contact_us"
        style="@style/TextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:drawableEnd="@drawable/ic_email_red"
        android:text="@string/contact_us"
        android:textSize="@dimen/_20ssp"
        tools:ignore="RtlCompat" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:background="#E5E5E5" />


    <TextView
        android:id="@+id/more_fragment_tv_about_app"
        style="@style/TextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:drawableEnd="@drawable/ic_about_app"
        android:text="@string/about_app"
        android:textSize="@dimen/_20ssp"
        tools:ignore="RtlCompat" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:background="#E5E5E5" />


    <TextView
        android:id="@+id/more_fragment_tv_rate_on_store"
        style="@style/TextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:drawableEnd="@drawable/ic_star_solid"
        android:text="@string/rate_app"
        android:textSize="@dimen/_20ssp"
        tools:ignore="RtlCompat" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:background="#E5E5E5" />


    <TextView
        android:id="@+id/more_fragment_tv_notification_setting"
        style="@style/TextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:drawableEnd="@drawable/ic_cog_solid"
        android:text="@string/notifications_settings"
        android:textSize="@dimen/_20ssp"
        tools:ignore="RtlCompat" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:background="#E5E5E5" />


    <TextView
        android:id="@+id/more_fragment_tv_sign_out"
        style="@style/TextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:drawableEnd="@drawable/ic_sign_out_alt_solid"
        android:text="@string/sign_out"
        android:textSize="@dimen/_20ssp"
        tools:ignore="RtlCompat" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:background="#E5E5E5" />


</LinearLayout>