<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login">


    <ImageView
        style="@style/LogoLoginCycleStyle"
        android:layout_above="@id/change_password_fragment_ed_code" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/change_password_fragment_ed_code"
        style="@style/TextInputLayoutLoginCycleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:errorTextAppearance="@style/Error">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/EditTextLoginCycleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:inputType="phone" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/change_password_fragment_ed_new_password"
        style="@style/TextInputLayoutLoginCycleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/change_password_fragment_ed_code"
        app:errorTextAppearance="@style/Error"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/EditTextLoginCycleStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_25sdp"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/change_password_fragment_ed_confirm_new_password"
        style="@style/TextInputLayoutLoginCycleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/change_password_fragment_ed_new_password"
        app:errorTextAppearance="@style/Error"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/EditTextLoginCycleStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_25sdp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/change_password_fragment_btn_change"
        style="@style/LoginCycleButtonStyle"
        android:layout_width="@dimen/_110sdp"
        android:layout_height="@dimen/_25sdp"
        android:textAllCaps="false"
        android:layout_below="@id/change_password_fragment_ed_confirm_new_password"
        android:text="@string/change" />

</RelativeLayout>